--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/forms": "^7.1.2",
     "@angular/http": "^7.1.2",
     "@angular/material": "^7.1.1",
+    "@angular/material-moment-adapter": "^7.3.2",
     "@angular/platform-browser": "^7.1.2",
     "@angular/platform-browser-dynamic": "^7.1.2",
     "@angular/router": "^7.1.2",
@@ -36,6 +37,7 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "ng-simple-slideshow": "^1.2.6",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
